# ice-locator-mcp

./: .gitignore  AUDIO_FINGERPRINTING_PROTECTION_FINAL_SUMMARY.md  AUDIO_FINGERPRINTING_PROTECTION_SUMMARY.md  CANVAS_FINGERPRINTING_PROTECTION_FINAL_SUMMARY.md  CANVAS_FINGERPRINTING_PROTECTION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COOKIE_HANDLING_FINAL_SUMMARY.md  COOKIE_HANDLING_SUMMARY.md  CSV_ENRICHMENT.md  DETAINee_FACILITY_LINKING_SUMMARY.md  DEVELOPMENT.md  DEVICE_MEMORY_CPU_FINAL_SUMMARY.md  DEVICE_MEMORY_CPU_SUMMARY.md  ENHANCEMENT_SUMMARY.md  EXTENSION_SIMULATION_FINAL_SUMMARY.md  EXTENSION_SIMULATION_SUMMARY.md  FONT_ENUMERATION_PROTECTION_FINAL_SUMMARY.md  FONT_ENUMERATION_PROTECTION_SUMMARY.md  FONT_MEDIA_SIMULATION_FINAL_SUMMARY.md  FONT_MEDIA_SIMULATION_SUMMARY.md  FORTIFIED_BROWSER_APPROACH.md  FORTIFIED_BROWSER_IMPLEMENTATION_PLAN.md  FORTIFIED_BROWSER_TASKS.md  HARDWARE_CONCURRENCY_PLATFORM_FINAL_SUMMARY.md  HARDWARE_CONCURRENCY_PLATFORM_SUMMARY.md  HEATMAP_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_FILE_SUMMARY.md  IMPLEMENTATION_PLAN.md  LAUNCH_GUIDE.md  LICENSE  MEDIA_DEVICE_SPOOFING_FINAL_SUMMARY.md  MEDIA_DEVICE_SPOOFING_SUMMARY.md  MONITORING_PLAN.md  PLUGIN_FINGERPRINTING_PROTECTION_FINAL_SUMMARY.md  PLUGIN_FINGERPRINTING_PROTECTION_SUMMARY.md  PROJECT_COMPLETION.md  README.md  (+81 more)
.sst/: esbuild.json  stage
ai_docs/: AUTOMATED_DATA_UPDATES_SPEC.md  CSV_ENRICHMENT.md  DATA_PROCESSING_COMPLETION.md  DETAINee_SEARCH_PROCESS.md  FIX_403_SUMMARY.md  GITHUB_SETUP.md  HEATMAP_API_POPULATION_COUNT_VERIFICATION.md  MONTHLY_POPULATION_DATA_FEATURE_SPEC.md  PHASE4_IMPLEMENTATION_SUMMARY.md  POPULATION_DATA_INTEGRATION_SUMMARY.md  PROCESSING_SUMMARY.md  PROJECT_IMPLEMENTATION_SUMMARY.md  RELEASE_CHECKLIST.md  TECHNICAL_SPECS.md
assets/: README.md
config/: Dockerfile  docker-compose.yml  init-db.sql  mcp-manifest.json  pre-release-validation-1.0.0.json  production.json  production_with_proxies.json  proxy_list.txt  start_docker_services.sh
docs/: LEGAL.md  PRIVACY.md  advanced_fingerprinting_evasion.md  api.md  audio_fingerprinting_protection.md  browser_clustering.md  canvas_fingerprinting_protection.md  captcha_handling.md  configuration.md  contributing.md  cookie_manager.md  device_memory_cpu_manager.md  examples.md  extension_manager.md  fingerprinting_tester.md  font_enumeration_protection.md  font_media_manager.md  hardware_concurrency_platform_manager.md  installation.md  javascript_execution_simulation.md  media_device_spoofing.md  plugin_fingerprinting_protection.md  request_pattern_obfuscation.md  residential_proxy_integration.md  session_manager.md  timezone_locale_manager.md  tools.md  troubleshooting.md  viewport_manager.md  viewport_screen_spoofing.md  webgl_canvas_manager.md  webgl_fingerprinting_evasion.md
examples/: advanced_fingerprinting_evasion_example.py  audio_fingerprinting_protection_example.py  browser_clustering_example.py  canvas_fingerprinting_protection_example.py  captcha_handler_example.py  cookie_manager_example.py  device_memory_cpu_example.py  fingerprinting_tester_example.py  font_enumeration_protection_example.py  font_media_manager_example.py  hardware_concurrency_platform_example.py  javascript_execution_simulation_example.py  media_device_spoofing_example.py  plugin_fingerprinting_protection_example.py  request_pattern_obfuscation_example.py  residential_proxy_integration_example.py  session_manager_example.py  timezone_locale_manager_example.py  viewport_manager_example.py  viewport_screen_spoofing_example.py  webgl_canvas_manager_example.py  webgl_fingerprinting_evasion_example.py
hispanic_names_data/: FINAL_REPORT.md  MCP_SEARCH_INSTRUCTIONS.md  README.md  SEARCH_LIMITATIONS.md  SUMMARY.md  extract_census_data.py  extract_hispanic_names.py  generate_extended_full_names.py  generate_full_names.py  mcp_search_client.py  search_names_in_batches.py  simple_extract.py  test_name_search.py  test_names.txt  test_search_results.csv
mobile-app/: App.tsx  app.json  heatmap-demo.html  package-lock.json  package.json  test_heatmap_components.js  web-app.html
scripts/: README.md  analyze_duplicates.py  analyze_facilities.py  check_database.py  check_database_schema.py  check_database_stats.py  cleanup_duplicates.py  create_comprehensive_facilities.py  demo_mcp_usage.py  demonstrate_mcp_usage.py  examine_trac_data.py  export_facilities_for_frontend.py  fetch_complete_trac_data.py  fetch_historical_trac_data.py  generate_about_page.py  (+37 more)
(+229 files in other folders)
